1.缓存模块完成 2.基本功能都已全部完成